cli/tests/snapshots/real/03-approval/03-declined-final.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请尝试创建 declined-by-tui.txt

● Failed to update file
└─ Failed to update file — user declined the requested one-time tool authorization

● 工具调用被用户拒绝。没有写入文件。


















  ⏸ Manual                                                       /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
