cli/tests/snapshots/real/03-approval/04-ask-permissions-details.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                                …                          [Dashboard]

> 请创建 approved-by-tui.txt

● Updated file approved-by-tui.txt
 └─ write_file [call-approve]
    {
      "path": "approved-by-tui.txt",
      "content": "approved through the real TUI\n"
    }
    wrote approved-by-tui.txt
    view full

● 工具已获批准并执行。文件写入完成。












                                                                 /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Space to expand · Enter to view details · Esc to return to input
