cli/tests/snapshots/real/03-approval/09-sandbox-blocked.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> start a session before changing permissions

● SANDBOX-SETUP-DONE

> 尝试在工作区外创建 sandbox-must-not-write.txt

● Thought

● Command failed
└─ Command failed — sandbox denied the action, but the attempt may have produced side effects, so
the exact call was not retried; reason: the process reported an access restriction…

● 沙盒拒绝了越界写入，目标文件没有生成。











  ▶ Bypass permissions                                           /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
