cli/tests/snapshots/real/03-approval/10-sandbox-process-details.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]


> 尝试在工作区外创建 sandbox-must-not-write.txt

● Thought

● Command failed
└─ shell-command [call-sandbox]
   {
     "arguments": [
       "-c",
       "touch ../sandbox-must-not-write.txt 2>&- || { echo 'sandbox fixture: operation not
permitted' >&2; exit 1; }"
     ],
     "program": "/bin/sh",
     "working_directory": "."
   }
   sandbox denied the action, but the attempt may have produced side effects, so the exact call was
not retried; reason: the process reported an access restriction; output: sandbox fixture: operation
not permitted
   view full

● 沙盒拒绝了越界写入，目标文件没有生成。

                                      Jump to bottom (click) ↓
                                                                 /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Space to expand · Enter to view details · Esc to return to input
