cli/tests/snapshots/real/03-approval/11-sandbox-process-full-details.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                                …                          [Dashboard]


● Reasoning ┌── Transcript cell ──────────────────────────────────────────────────[✗]─┐
 └─ 先在受限│                                                                         │
    再根据进│  Content: shell-command [call-sandbox]                                  │
            │           {                                                             │
● Command fa│             "program": "/bin/sh",                                       │
 └─ shell-co│             "arguments": [                                              │
    {       │               "-c",                                                     │
      "progr│               "touch ../sandbox-must-not-write.txt 2>&- || { echo       │
      "argum│  'sandbox fixture: operation not permitted' >&2; exit 1; }"             │
        "-c"│             ],                                                          │
        "tou│             "working_directory": "."                                    │ not
    permitte│           }                                                             │
      ],    │           sandbox denied the action, but the attempt may have produced  │
      "worki│  side effects, so the exact call was not retried; reason: the process   │
    }       │  reported an access restriction; output: sandbox fixture: operation not │
    sandbox │  permitted                                                              │xact call was
    not retr│                                                                         │xture:
    operatio│                                                                         │
    view ful│                                                                         │
            │                                                                         │
● 沙盒拒绝了│                                                                         │
            │                                                                         │
            │                                                                         │
            └─────────────────────────────────────────────────────────────────────────┘
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  ↑/↓ scroll  ·  Esc to close
