cli/tests/snapshots/real/03-approval/12-reasoning-details.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> start a session before changing permissions

● SANDBOX-SETUP-DONE

> 尝试在工作区外创建 sandbox-must-not-write.txt

● Thought
└─ 先在受限进程中尝试写入工作区外部。
   再根据进程结果确认目录边界是否生效。

● Command failed
└─ Command failed — sandbox denied the action, but the attempt may have produced side effects, so
the exact call was not retried; reason: the process reported an access restriction…

● 沙盒拒绝了越界写入，目标文件没有生成。









                                                                 /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Space to expand · Enter to view details · Esc to return to input
