cli/tests/snapshots/real/03-approval/permission-menu-shared-copy.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                                …                          [Dashboard]


            ┌── Permissions ──────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │  Auto                                                                 + │
            │  Manual                                                               + │
            │> Bypass permissions                                           Current - │
            │    Skip most approvals; access limits still apply                       │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            └─────────────────────────────────────────────────────────────────────────┘
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ──────────────────────────────────────────────────────────────────────── Automatic model · Plan

  Enter confirm · ←/→ details · Esc close
